# simple-ssh-client

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg  ssh_client.py  test_ssh_client.py
.github/workflows/: main.yml  release.yml
simple_ssh_client/: client.py  schema.py
tests/: test_ssh_client.py
